Implemented forward API internals. Updated request/callback skeleton. SWP-51
